chore: clean up the io utility helpers